# notes

./: README_xacro.md  temp.sh
gdmp_project-unstable/src/camera_robot_calibration/camera-utils/: CMakeLists.txt  package.xml  setup.py
gdmp_project-unstable/src/camera_robot_calibration/camera-utils/launch/: apriltag_viewer.launch
gdmp_project-unstable/src/camera_robot_calibration/camera-utils/rviz/: apriltag_viewer.rviz
gdmp_project-unstable/src/camera_robot_calibration/camera-utils/src/: apriltag_viewer_node.py  camera_demo.py  rs_camera_node.py
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/: CMakeLists.txt  README.md  package.xml
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/config/: tags_11_12_corners.yaml  tags_6789_centers.yaml  tags_6789_corners.yaml
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/launch/: camera_robot_callibration.launch
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/rviz/: calibrate_camera_view.rviz
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/scripts/: camera_robot_calibration_node.py  publish_calibration.py  publish_calibration_pose_camera.py  publish_tf_platform.py
gdmp_project-unstable/src/camera_robot_calibration/camera_robot_calibration/src/: camera_registration_node_node.cpp
gdmp_project-unstable/src/descriptions/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/descriptions/ati_sensor_description/urdf/: ati_mini_40.urdf.xacro
gdmp_project-unstable/src/descriptions/lwr4p_description/urdf/: lwr4p.urdf.xacro
gdmp_project-unstable/src/descriptions/phritool_description/rviz/: robotic_platform.rviz
gdmp_project-unstable/src/descriptions/phritool_description/urdf/: phritool.urdf.xacro
gdmp_project-unstable/src/descriptions/realsense2_description/launch/: view_d415_model.launch  view_d435_model.launch  view_d435i_model.launch  view_l515_model.launch  view_multiple_d435_models.launch  view_r410_model.launch  view_r430_model.launch
gdmp_project-unstable/src/descriptions/realsense2_description/urdf/: _d415.urdf.xacro  _d435.urdf.xacro  _d435i.urdf.xacro  _l515.urdf.xacro  _r410.urdf.xacro  _r430.urdf.xacro  _usb_plug.urdf.xacro  rs_adapter.urdf.xacro  test_d415_camera.urdf.xacro  test_d435_camera.urdf.xacro  test_d435_multiple_cameras.urdf.xacro  test_d435i_camera.urdf.xacro  test_l515_camera.urdf.xacro  test_r410_camera.urdf.xacro  test_r430_camera.urdf.xacro
gdmp_project-unstable/src/descriptions/rg2_description/urdf/: rg2_ft.urdf.xacro  test.urdf
gdmp_project-unstable/src/descriptions/robotic_platform_description/launch/: robotic_platform_description.launch
gdmp_project-unstable/src/descriptions/robotic_platform_description/urdf/: robot_description.xacro  robotic_platform.urdf.xacro
gdmp_project-unstable/src/descriptions/robotiq_85_description/launch/: display.launch
gdmp_project-unstable/src/descriptions/robotiq_85_description/urdf/: kinova_robotiq_85_gripper.xacro  robotiq_85_gripper.transmission.xacro  robotiq_85_gripper.urdf.xacro  robotiq_85_gripper.xacro  robotiq_85_kinova_coupler.urdf.xacro
gdmp_project-unstable/src/descriptions/robotiq_epic_40_description/launch/: upload_robotiq_85_gripper.launch  view_robotiq_epick_40.urdf.launch
gdmp_project-unstable/src/descriptions/robotiq_epic_40_description/rviz/: robotiq_epick_40.rviz
gdmp_project-unstable/src/descriptions/robotiq_epic_40_description/urdf/: robotiq_epick_40.urdf.xacro  test_robotiq_epick_40.xacro
gdmp_project-unstable/src/descriptions/robots/: lwr4p_adapter_rs435i.urdf.xacro  lwr4p_asus_xtion_pro.urdf.xacro  lwr4p_ati40_phritool.urdf.xacro  lwr4p_notool.urdf.xacro  lwr4p_phritool.urdf.xacro  ur5e_adapter_rs435i.urdf.xacro  ur5e_ati40_phritool.urdf.xacro  ur5e_notool.urdf.xacro  ur5e_phritool.urdf.xacro  ur5e_robotiq85gripper.urdf.xacro
gdmp_project-unstable/src/descriptions/ur_description/launch/: ur10_upload.launch  ur3_upload.launch  ur5_upload.launch
gdmp_project-unstable/src/descriptions/ur_description/urdf/: ur10.urdf.xacro  ur10_robot.urdf.xacro  ur3.urdf.xacro  ur3_robot.urdf.xacro  ur5.urdf.xacro  ur5_robot.urdf.xacro
gdmp_project-unstable/src/descriptions/ur_e_description/launch/: ur10e_upload.launch  ur3e_upload.launch  ur5e_upload.launch  (+3 more)
gdmp_project-unstable/src/dummy/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/dummy/config/: config.yaml  out_config.yaml
gdmp_project-unstable/src/dummy/launch/: rviz_publish_test.launch
gdmp_project-unstable/src/dummy/src/: cart_space_trajectory.cpp  gmp_train_with_same_start_end_pos.cpp  move_to_joints_pos_action_test.cpp  ode_test.cpp  rviz_publish_test.cpp  yaml_cpp_example.cpp
gdmp_project-unstable/src/dummy/urdf/: scene.xacro
gdmp_project-unstable/src/lib/dummy_/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/lib/matlab_lib/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/lib/ros_lib/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/lib/rviz_lib/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/lib/yaml-cpp/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/project_name_/global_gui/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/project_name_/gmp_model/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/project_name_/main_controller/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/project_name_/main_program/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/robot_camera_tf_publisher/: CMakeLists.txt  package.xml
gdmp_project-unstable/src/robot_camera_tf_publisher/launch/: lwr4pCam_tf_publisher.launch  ur5Cam_tf_publisher.launch
gdmp_project-unstable/src/robot_camera_tf_publisher/rviz/: config.rviz
gdmp_project-unstable/src/robot_camera_tf_publisher/src/: controller.cpp  main.cpp  print_utils.cpp
gdmp_project-unstable/src/robot_camera_tf_publisher/urdf/: bi_ur5_rs_platform.xacro  lwr4pCam_description.xacro  ur5Cam_description.xacro
gdmp_project-unstable/src/robots/conveyor_belt/: CMakeLists.txt  README.md  package.xml  table
(+401 files in other folders)
