<?xml version="1.0"?>
<package>
  <name>descriptions</name>
  <version>0.0.0</version>
  <description>Contains various robot, sensor and tools/objects descriptions</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export></export>
  
</package>
