<?xml version="1.0"?>
<package>
  <name>dummy</name>
  <version>0.0.1</version>
  <description>Dummy package</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>yaml-cpp</build_depend>

  <build_depend>kdl_parser</build_depend>
  <run_depend>kdl_parser</run_depend>

  <build_depend>robot_state_publisher</build_depend>
  <run_depend>robot_state_publisher</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>rviz_lib</build_depend>
  <run_depend>rviz_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>
  
  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>ros_lib</build_depend>
  <run_depend>ros_lib</run_depend>

  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>yaml-cpp</run_depend>

</package>
