<?xml version="1.0"?>
<package>
  <name>robot_camera_tf_publisher</name>
  <version>0.0.0</version>
  <description>Provides the tranform of the camera w.r.t. to a user specified frame, relative to the robot's base</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>ros_lib</build_depend>
  <run_depend>ros_lib</run_depend>

  <build_depend>robot_wrapper</build_depend>
  <run_depend>robot_wrapper</run_depend>

  <export></export>
</package>
