<?xml version="1.0"?>
<package>
  <name>dummy_</name>
  <version>0.0.0</version>
  <description>Package with dummy nodes simulating real ones</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>
  
  <build_depend>image_transport</build_depend>
  <run_depend>image_transport</run_depend>

  <build_depend>cv_bridge</build_depend>
  <run_depend>cv_bridge</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>
  
  <export></export>
</package>
