<?xml version="1.0"?>
<package>
  <name>global_gui</name>
  <version>0.0.0</version>
  <description>global_gui</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <export></export>
</package>
