<?xml version="1.0"?>
<package>
  <name>main_controller</name>
  <version>0.0.0</version>
  <description>main_controller</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>

  <build_depend>thread_lib</build_depend>
  <run_depend>thread_lib</run_depend>

  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>robot_wrapper</build_depend>
  <run_depend>robot_wrapper</run_depend>

  <build_depend>gui_lib</build_depend>
  <run_depend>gui_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>rviz_lib</build_depend>
  <run_depend>rviz_lib</run_depend>

  <build_depend>rvirobotiq_85_gripperz_lib</build_depend>
  <run_depend>robotiq_85_gripper</run_depend>
  
  <build_depend>apriltag_ros</build_depend>
  <run_depend>apriltag_ros</run_depend>

  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <export></export>
</package>
