<?xml version="1.0"?>
<package>
  <name>im_traj_demo_controller</name>
  <version>0.0.0</version>
  <description>im_traj_demo_controller</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>
  
  <build_depend>gmp_lib</build_depend>
  <run_depend>gmp_lib</run_depend>

  <build_depend>io_lib</build_depend>
  <run_depend>io_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>thread_lib</build_depend>
  <run_depend>thread_lib</run_depend>

  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>gui_lib</build_depend>
  <run_depend>gui_lib</run_depend>

  <build_depend>rviz_lib</build_depend>
  <run_depend>rviz_lib</run_depend>

  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <build_depend>main_controller</build_depend>
  <run_depend>main_controller</run_depend>

  <build_depend>ros_lib</build_depend>
  <run_depend>ros_lib</run_depend>
  
  <export></export>
</package>
