<?xml version="1.0"?>
<package>
  <name>online_adapt_controller</name>
  <version>0.0.0</version>
  <description>online_adapt_controller</description>

  <maintainer email="antosidi646@gmail.com">Antonis Sidiropoulos</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>roslib</build_depend>
  <run_depend>roslib</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <build_depend>gmp_lib</build_depend>
  <run_depend>gmp_lib</run_depend>

  <build_depend>math_lib</build_depend>
  <run_depend>math_lib</run_depend>

  <build_depend>plot_lib</build_depend>
  <run_depend>plot_lib</run_depend>

  <build_depend>thread_lib</build_depend>
  <run_depend>thread_lib</run_depend>

  <build_depend>robo_lib</build_depend>
  <run_depend>robo_lib</run_depend>

  <build_depend>gui_lib</build_depend>
  <run_depend>gui_lib</run_depend>

  <build_depend>yaml-cpp</build_depend>
  <run_depend>yaml-cpp</run_depend>

  <build_depend>main_controller</build_depend>
  <run_depend>main_controller</run_depend>
  
  <export></export>
</package>
